# knml_lazik

./: README.md
src/trailblazer_bringup/: package.xml  setup.cfg  setup.py
src/trailblazer_bringup/launch/: urdf_robot.launch.py
src/trailblazer_bringup/launch/real_robot/: controllers_robot.launch.py  oakd_robot.launch.py  slam_robot.launch.py
src/trailblazer_bringup/launch/simulation/: copy_gazebo.launch.py  gazebo_robot.launch.py  nav2_gazebo_robot.launch.py  rgbd_gazebo_robot.launch.py  (+1 more)
src/trailblazer_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py  trailblazer_controller.xml
src/trailblazer_controller/config/: controllers.yaml
src/trailblazer_controller/hardware/: trailblazer_system.cpp
src/trailblazer_controller/hardware/include/trailblazer_controller/: trailblazer_system.hpp
src/trailblazer_controller/launch/: controller.launch.py
src/trailblazer_description/: package.xml  setup.cfg  setup.py
src/trailblazer_description/config/: joint_names_Złożenie_cale_urdf.yaml
src/trailblazer_description/launch/: rsp.launch.py
src/trailblazer_description/meshes/: BL_wheel.STL  BR_wheel.STL  FL_wheel.STL  FR_wheel.STL
src/trailblazer_description/urdf/: depth_camera.xacro  depthai_descr.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  interials.xacro  lidar.xacro  ros2_control.xacro  rover.urdf.xacro
src/trailblazer_detections/: package.xml  setup.cfg  setup.py
src/trailblazer_gazebo/: package.xml  setup.cfg  setup.py
src/trailblazer_gazebo/launch/: simulation.launch.py
src/trailblazer_gazebo/worlds/: office.world
src/trailblazer_interfaces/: package.xml  setup.cfg  setup.py
src/trailblazer_joystick/: package.xml  setup.cfg  setup.py
src/trailblazer_joystick/launch/: joy_control.launch.py
src/trailblazer_joystick/trailblazer_joystick/: joy_twist_publisher.py
src/trailblazer_nav2/: package.xml  setup.cfg  setup.py
src/trailblazer_nav2/config/: arc_2025.yaml  ekf.yaml  nav2_params.yaml  navsat.yaml  rgbd_nav2_params.yaml
src/trailblazer_nav2/launch/: localization.py  localization_launch.py  navigation_launch.py
src/trailblazer_oak/: package.xml  setup.cfg  setup.py
src/trailblazer_oak/launch/: depthai.launch.py  rgb_stereo_node.launch.py  urdf_launch.py
src/trailblazer_rtabmap/: package.xml  setup.cfg  setup.py
src/trailblazer_rviz/: package.xml  setup.cfg  setup.py
src/trailblazer_rviz/config/: camera.rviz  nav2.rviz  simulation.rviz  slam.rviz  urdf_model.rviz
src/trailblazer_rviz/launch/: rviz.launch.py
src/trailblazer_slam/: package.xml  setup.cfg  setup.py
src/trailblazer_slam/config/: mapper_params_online_async.yaml
src/trailblazer_slam/launch/: slam.launch.py
(+7 files in other folders)
