<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trailblazer_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fillio00@wp.pl">walkowiczf</maintainer>
  <license>Apache-2.0</license>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>catkin_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_manager plugin="${prefix}/hardware/trailblazer_controller.xml"/>
  </export>
</package>
